	* Fixed issue #35775: Remove redundant indexes
	* Fixed issue #40509: Wrong ISO codes for currency Serbian Dinar
	* Follow up to feature #45630: Update currencies in accordance with ISO 4217 Amendment Number 154
	* Update version to 2.3.2
	* Resolves #45681: Require TYPO3 4.7
	* Update version to 2.4
	* Resolves #45684: Add autoloading
	* Follow up to #45684: Add autoloading

2013-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 2.3.1

2012-05-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed security issue [Ticket#2011101510000057] XSS in static_info_tables 2.3.0

2011-12-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #32614: Errors in names of two provinces of Italy
	* Fixed issue #32094: Usage of deprecated testInt method (Thanks to Stefan Galinski)
	* Fixed issue #29241: NZ static currencies thousands decimal
	* Fixed issue #28830: cn_short_local for Czech Republic misses an accent mark
	* Added feature #32635: Update countries to level of ISO 3166-1:2006 - Newsletter VI-9 (2011-06-12)
	* Added feature #32636: Update countries to level of ISO 3166-1:2006 - Newsletter VI-10 (2011-08-09)
	* Added feature #32637: Update countries to level of ISO 3166-1:2006 - Newsletter VI-11 (2011-11-08)
	* Added feature #28104: Polish country zones (Thanks to Tomasz Krawczyk)
	* Fixed issue #27646: Territory of United Arab Emirates
	* Follow-up to feature #28104: Polish country zones
	* Fixed issue #13284: tx_staticinfotables_div::getCurrentLanguage should return 'EN' if language is 'default' (Thanks to Robert Heel)
	* Fixed issue #28483: tx_staticinfotables_div::getCurrentLanguage issues repetitive SQL queries (Thanks to Raphaël Riel)
	* Updated version to 2.3.0

2011-01-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9423: Add country zones for the regions and departments of France
	* Fixed issue #12530: Erroneous country zone codes for Austria
	* Follow-up to issue #12530: Erroneous country zone codes for Austria (remove country code)